<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    tools:context="com.jaring.jom.selfservice.Setting" >
    
    <Button
        android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/button_send" 
		android:onClick="onSendMessage"
        />
    
    <ToggleButton
        android:id="@+id/toggleReminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textOn="@string/toggle_day"
        android:textOff="@string/toggle_week"
        android:checked="true"
        />
    
    <ToggleButton
        android:id="@+id/toggleSync"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textOn="@string/start_sync"
        android:textOff="@string/stop_sync"
        android:checked="true"
        />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/lblUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/last_update" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/button_logout"
        android:onClick="onLogout" />
    
</LinearLayout>
