<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jaring.jom.selfservice.DisplayEvent" >

    <TextView
        android:id="@+id/lblTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/lblTitle" />

    <EditText
        android:id="@+id/edtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lblTitle"
        android:layout_alignBottom="@+id/lblTitle"
        android:layout_alignLeft="@+id/edtStartTime"
        android:ems="10"
        android:enabled="false"
        android:inputType="text" >
    </EditText>

    <TextView
        android:id="@+id/lblDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lblTitle"
        android:layout_below="@+id/edtTitle"
        android:layout_marginTop="19dp"
        android:text="@string/lblDate" />

    <EditText
        android:id="@+id/edtDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lblDate"
        android:layout_alignBottom="@+id/lblDate"
        android:layout_alignLeft="@+id/edtTitle"
        android:ems="10"
        android:enabled="false"
        android:inputType="date" />

    <TextView
        android:id="@+id/lblDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lblDate"
        android:layout_centerVertical="true"
        android:text="@string/lblDesc" />

    <EditText
        android:id="@+id/edtStartTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/lblStartTime"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:enabled="false"
        android:inputType="time" />

    <TextView
        android:id="@+id/lblStartTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/edtDate"
        android:layout_marginTop="23dp"
        android:text="@string/lblTime" />

    <EditText
        android:id="@+id/edtDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lblDescription"
        android:layout_alignRight="@+id/edtEndTime"
        android:layout_below="@+id/lblDescription"
        android:ems="10"
        android:enabled="false"
        android:inputType="textMultiLine" />

    <EditText
        android:id="@+id/edtEndTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edtStartTime"
        android:layout_below="@+id/edtStartTime"
        android:ems="10"
        android:enabled="false"
        android:inputType="time" />

</RelativeLayout>